// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders proper dom including elipse icon 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-label="Action Menu Toggle"
    class="pf-v5-c-menu-toggle pf-m-plain"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="pf-v5-svg"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 192 512"
      width="1em"
    >
      <path
        d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`snapshot matches after opening the action menu 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="Action Menu Toggle"
    class="pf-v5-c-menu-toggle pf-m-expanded pf-m-plain"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="pf-v5-svg"
      fill="currentColor"
      height="1em"
      role="img"
      viewBox="0 0 192 512"
      width="1em"
    >
      <path
        d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
      />
    </svg>
  </button>
  <div
    class="pf-v5-c-menu"
    data-ouia-component-id="OUIA-Generated-Dropdown-4"
    data-ouia-component-type="PF5/Dropdown"
    data-ouia-safe="true"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="pf-v5-c-menu__content"
    >
      <ul
        class="pf-v5-c-menu__list"
        role="menu"
      >
        <li
          class="pf-v5-c-menu__list-item"
          data-ouia-component-id="OUIA-Generated-DropdownItem-2"
          data-ouia-component-type="PF5/DropdownItem"
          data-ouia-safe="true"
          role="none"
        >
          <button
            class="pf-v5-c-menu__item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span
              class="pf-v5-c-menu__item-main"
            >
              <span
                class="pf-v5-c-menu__item-text"
              >
                Delete
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
